--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"start": "node dist/index.js",
+		"build": "tsc",
 		"dev": "tsc-watch --onSuccess \"node ./dist/index.js\"",
 		"format": "pnpm dlx @biomejs/biome format src --write",
 		"lint": "pnpm dlx @biomejs/biome lint src",
@@ -25,6 +26,7 @@
 		"@types/node": "^20.11.25",
 		"@types/ws": "^8.5.10",
 		"husky": "^9.0.11",
-		"tsc-watch": "^6.0.4"
+		"tsc-watch": "^6.0.4",
+		"typescript": "^5.4.3"
 	}
 }
